[package]
name = "juce-audio-devices-sys"
version = "0.1.0"
authors = ["Bojan Šernek <bojan@distopiksound.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
lazy_static = "1.4.0"

[build-dependencies]
cmake = "0.1.45"